@startuml Ortholib_Class

abstract class User {
    - id : int
    - email : string
    - roles : array
    - password : string
    - nom : string
    - prenom : string
    - telephone : string
    - createdAt : DateTimeImmutable
    - genre : string
    - ville : string

    + getId() : int
    + getEmail() : string
    + setEmail(email: string) : self
    + getUserIdentifier() : string
    + getRoles() : array
    + setRoles(roles: array) : self
    + getPassword() : string
    + setPassword(password: string) : self
    + eraseCredentials() : void
    + getNom() : string
    + setNom(nom: string) : self
    + getPrenom() : string
    + setPrenom(prenom: string) : self
    + getTelephone() : string
    + setTelephone(telephone: string) : self
    + getCreatedAt() : DateTimeImmutable
    + setCreatedAt(createdAt: DateTimeImmutable) : self
    + getGenre() : string
    + setGenre(genre: string) : self
    + getVille() : string
    + setVille(ville: string) : self
    + __toString() : string
}

class Administrateur {
    + getRoles() : Array
}

class Orthophoniste {
    - nombreHeureTravail : int
    - patients : Collection<Patient>
    - cabinet : Cabinet
    - imagesOrthophoniste : Collection<Image>
    - specialisation : String
    - seances : Collection<Seances>
    - exercices : Collection<Exercice>

    + getNombreHeureTravail() : int
    + setNombreHeureTravail(nombreHeureTravail : int) : void
    + getRoles() : Array
    + getPatients() : Collection<Patient>
    + addPatient(patient : Patient) : void
    + removePatient(patient : Patient) : void
    + getCabinet() : Cabinet
    + setCabinet(cabinet : Cabinet) : void
    + getImagesOrthophoniste() : Collection<Image>
    + addImagesOrthophoniste(imagesOrthophoniste : Image) : void
    + removeImagesOrthophoniste(imagesOrthophoniste : Image) : void
    + getSpecialisation() : String
    + setSpecialisation(specialisation : String) : void
    + getSeances() : Collection<Seances>
    + addSeances(seances : Seances) : void
    + removeSeances(seances : Seances) : void
    + getExercices() : Collection<Exercice>
    + addExercices(exercices : Exercice) : void
    + removeExercices(exercices : Exercice) : void
}

class Patient {
    - niveauLangue : String
    - difficulteTest : String
    - niveauApprentissage : String
    - deficient : String
    - difficulteRencontrees : Array
    - choixOrtho : Orthophoniste
    - imagesPatient : Collection<Image>
    - seances : Collection<Seances>
    - exercices : Collection<Exercice>
    - resultatExercices : Collection<ResultatExercice>

    + getNiveauLangue() : String
    + setNiveauLangue(niveauLangue : String)
    + getDifficulteTest() : String
    + setDifficulteTest(difficulteTest : String)
    + getNiveauApprentissage() : String
    + setNiveauApprentissage(niveauApprentissage : String)
    + getDeficient() : String
    + setDeficient(deficient : String)
    + getRoles() : Array
    + getDifficulteRencontrees() : Array
    + setDifficulteRencontrees(difficulteRencontrees : Array)
    + getChoixOrtho() : Orthophoniste
    + setChoixOrtho(choixOrtho : Orthophoniste)
    + getImagesPatient() : Collection<Image>
    + addImagesPatient(imagesPatient : Image)
    + removeImagesPatient(imagesPatient : Image)
    + getSeances() : Collection<Seances>
    + addSeance(seances : Seances)
    + removeSeance(seances : Seances)
    + getExercices() : Collection<Exercice>
    + addExercice(exercices : Exercice)
    + removeExercice(exercices : Exercice)
    + getResultatExercices() : Collection<ResultatExercice>
    + addResultatExercice(resultatExercices : ResultatExercice)
    + removeResultatExercice(resultatExercices : ResultatExercice)
}

class Cabinet {
    - id : int
    - nom : String
    - adresse : String
    - telephone : String
    - orthophonistes : Collection<Orthophoniste>
    - imagesCabinet : Collection<Image>

    + getId() : int
    + getNom() : String
    + setNom(nom : String)
    + getAdresse() : String
    + setAdresse(adresse : String)
    + getTelephone() : String
    + setTelephone(telephone : String)
    + getOrthophonistes() : Collection<Orthophoniste>
    + addOrthophoniste(orthophonistes : Orthophoniste)
    + removeOrthophoniste(orthophonistes : Orthophoniste)
    + getImagesCabinet() : Collection<Image>
    + addImagesCabinet(imagesCabinet : Image)
    + removeImagesCabinet(imagesCabinet : Image)
}

class Exercice {
    - id : int
    - type : String
    - chronometre : Patient
    - patient : Patient
    - orthophoniste : Orthophoniste
    - signification : Collection<Signification>
    - resultatExercices : Collection<ResultatExercice>

    + getId() : int
    + getType() : String
    + setType(type : String)
    + getChronometre() : int
    + setChronometre(chronometre : int)
    + getPatient() : Patient
    + setPatient(patient : Patient)
    + getOrthophoniste() : Orthophoniste
    + setOrthophoniste(orthophoniste : Orthophoniste)
    + getSignification() : Collection<Signification>
    + addSignification(signification : Signification)
    + removeSignification(signification : Signification)
    + getResultatExercices() : Collection<ResultatExercice>
    + addResultatExercice(resultatExercices : ResultatExercice)
    + removeResultatExercice(resultatExercices : ResultatExercice)
}

class Image {
    - id : int
    - name : String
    - cabinet : Cabinet
    - orthophoniste : Orthophoniste
    - patient : Patient

    + getId() : int
    + getName() : String
    + setName(name : String)
    + getCabinet() : Cabinet
    + setCabinet(cabinet : Cabinet)
    + getOrthophoniste() : Orthophoniste
    + setOrthophoniste(orthophoniste : Orthophoniste)
    + getPatient() : Patient
    + setPatient(patient : Patient)
}

class ResultatExercice {
    - id : int
    - exercice : Exercice
    - patient : Patient
    - score : int
    - date : DateTimeInterface

    + getId() : int
    + getExercice() : Exercice
    + setExercice(exercice : Exercice)
    + getPatient() : Patient
    + setPatient(patient : Patient)
    + getScore() : int
    + setScore(score : int)
    + getDate() : DateTimeInterface
    + setDate(date : DateTimeInterface)
}

class Seances {
    - id : int
    - orthophoniste : Orthophoniste
    - patient : Patient
    - dateHeureDebut : DateTimeInterface
    - dateHeureFin : DateTimeInterface
    - mode : string
    - duree : string
    - exercices : string

    + getId() : int
    + getOrthophoniste() : Orthophoniste
    + setOrthophoniste(orthophoniste: Orthophoniste) : self
    + getPatient() : Patient
    + setPatient(patient: Patient) : self
    + getDateHeureDebut() : DateTimeInterface
    + setDateHeureDebut(dateHeureDebut: DateTimeInterface) : self
    + getDateHeureFin() : DateTimeInterface
    + setDateHeureFin(dateHeureFin: DateTimeInterface) : self
    + getMode() : string
    + setMode(mode: string) : self
    + getDuree() : int
    + setDuree(duree: int) : self
    + calculerTotalHeures(seances: array) : int
    + verifierLimiteHeures(seances: array) : bool
    + getExercices() : string
    + setExercices(exercices: string) : self
}

class Signification {
    - id : int
    - mots : String
    - definition : Text 
    - exercices : Collection<Exercice>

    + getId() : int
    + getMots() : String
    + setMots(mots : String)
    + getDefinition() : Text
    + setDefinition(definition : Text)
    + getExercices() : Collection<Exercice>
    + addExercice(exercices : Exercice)
    + removeExercice(exercices : Exercice)
}

class Specialisation {
    - id : int
    - label : string
    - orthophoniste : Collection<Orthophoniste>
    - patient : Collection<Patient>

    + getId() : int
    + getLabel() : string
    + setLabel(label: string) : Specialisation
    + getOrthophoniste() : Collection<Orthophoniste>
    + addOrthophoniste(orthophoniste: Orthophoniste) : Specialisation
    + removeOrthophoniste(orthophoniste: Orthophoniste) : Specialisation
    + getPatient() : Collection<Patient>
    + addPatient(patient: Patient) : Specialisation
    + removePatient(patient: Patient) : Specialisation
}


class Commentaire {
    - id : int
    - texte : string
    - createdAt : DateTimeImmutable
    - roleAuteur : string
    - roleDestinataire : string

    + getId() : int
    + getTexte() : string
    + setTexte(texte: string) : Commentaire
    + getCreatedAt() : DateTimeImmutable
    + setCreatedAt(createdAt: DateTimeImmutable) : Commentaire
    + getAuteur() : User
    + setAuteur(auteur: User) : Commentaire
    + getDestinataire() : User
    + setDestinataire(destinataire: User) : Commentaire
    + getRoleAuteur() : string
    + setRoleAuteur(roleAuteur: string) : Commentaire
    + getRoleDestinataire() : string
    + setRoleDestinataire(roleDestinataire: string) : Commentaire
}

User <|-- Orthophoniste
User <|-- Patient
User <|-- Administrateur

Orthophoniste "1" -- "0..*" Seances : contient
Patient "1" -- "0..*" Seances : contient
Cabinet "1" -- "0..*" Orthophoniste : emploie
Orthophoniste "1" -- "0..*" Patient : suit
Seances "1" -- "0..*" Exercice : contient
Patient "1" -- "0..*" Exercice : suit
Exercice "0..*" -- "0..*" ResultatExercice : a
Exercice "0..*" -- "0..*" Signification : contient
Cabinet "1" -- "0..*" Image : contient
Orthophoniste "1" -- "0..*" Image : contient
Patient "1" -- "0..*" Image : contient
Patient "1" -- "0..*" ResultatExercice : a
Orthophoniste "1" -- "0..*" Exercice : a
Specialisation "1" -- "0..*" Orthophoniste : contient
Specialisation "1" -- "0..*" Patient : concerne
User "1" -- "0..*" Commentaire : ecrit

@enduml